client/src/components/userProfile/userProfile.css
.profile-info {
    @apply grid grid-cols-2 gap-8 p-6 h-screen rounded-lg;
}
.login-info {
    @apply grid grid-cols-2 grid-rows-2 p-6;
}
.PFP-upload {
    @apply row-span-2;
}
.PFP-upload-input {
    @apply bg-background-medium flex-1 rounded-md text-lg text-white p-3 row-span-2 h-fit;
}
.field {
    @apply flex items-center gap-6 m-6 overflow-hidden text-ellipsis;
}

.heading {
    @apply text-highlight-color font-semibold text-lg w-1/4;
}

.delete-button {
    @apply bg-error-red border-2 border-error-red transition duration-300 ease-in-out;
}

.delete-button:hover {
    @apply bg-transparent transition duration-300 ease-in-out;
}

.update-button {
    @apply bg-highlight-color border-2 border-highlight-color transition duration-300 ease-in-out;
}

.update-button:hover {
    @apply bg-transparent transition duration-300 ease-in-out;
}  

.description-text {
    @apply h-1/2;
}

.picture-upload-input {
    @apply bg-background-medium flex-1 rounded-md text-lg text-white p-3;
}
.images-container {
    @apply grid grid-cols-5 row-span-2 p-8 place-items-center bg-background-medium rounded-lg;
}
.image {
    @apply m-4 max-h-24 max-w-24;
}
.image > .delete-button {
    @apply p-2;
}
button {
    @apply p-5 rounded-lg m-3;
}

textarea, select, option {
    @apply bg-background-medium flex-1 rounded-md text-lg text-white p-3;
}

textarea {
    @apply h-12 resize-none overflow-hidden;
}

select {
    @apply h-12;
}

